[gd_scene load_steps=43 format=3 uid="uid://ckri6lsvpnplp"]

[ext_resource type="Script" path="res://shopmenu.gd" id="1_hgj28"]
[ext_resource type="Texture2D" uid="uid://c8rgh2mmpcrvc" path="res://art/environment/farmingTilesheetComplete.png" id="2_1vs04"]
[ext_resource type="Texture2D" uid="uid://csd78qdwq23lm" path="res://art/ingredients/ingredient (2).png" id="3_a6byi"]
[ext_resource type="Texture2D" uid="uid://dl1oca0ll5ac" path="res://art/ingredients/ingredient (18).png" id="4_dldyt"]
[ext_resource type="Texture2D" uid="uid://bvvgejprxif46" path="res://art/ingredients/ingredient (13).png" id="5_xyv3w"]
[ext_resource type="Texture2D" uid="uid://bguaet5wbhdmc" path="res://art/ingredients/ingredient (5).png" id="6_kgbqw"]
[ext_resource type="Texture2D" uid="uid://bh7776denjs35" path="res://art/ingredients/ingredient (11).png" id="7_2jycr"]
[ext_resource type="Texture2D" uid="uid://b63i2bnmwl6in" path="res://art/ingredients/ingredient (4).png" id="8_o50oc"]
[ext_resource type="Texture2D" uid="uid://5dumoqbqpbkb" path="res://art/ingredients/ingredient (16).png" id="9_tiyoy"]
[ext_resource type="Texture2D" uid="uid://dve62hy7grlnj" path="res://art/ingredients/ingredient (14).png" id="10_akept"]
[ext_resource type="Texture2D" uid="uid://cpwsw5f5583gv" path="res://art/ingredients/ingredient (9).png" id="11_6ds4l"]
[ext_resource type="Texture2D" uid="uid://bdi2va4a372vb" path="res://art/ingredients/ingredient (17).png" id="12_t4plv"]
[ext_resource type="Texture2D" uid="uid://qe8swupkvmmm" path="res://art/ingredients/ingredient (7).png" id="13_a2rj2"]
[ext_resource type="Texture2D" uid="uid://d0si3awi858cb" path="res://art/ingredients/ingredient (15).png" id="14_xpy1g"]
[ext_resource type="Texture2D" uid="uid://c1e4uhrwwrioc" path="res://art/ingredients/ingredient (10).png" id="15_qcghy"]
[ext_resource type="Texture2D" uid="uid://b77rscx133657" path="res://art/ingredients/ingredient (6).png" id="16_773u0"]
[ext_resource type="Texture2D" uid="uid://b05vs3eoesr3e" path="res://art/ingredients/ingredient (3).png" id="17_8w04p"]
[ext_resource type="Texture2D" uid="uid://knxjyd0q0ft5" path="res://art/ingredients/ingredient (8).png" id="18_3anbu"]
[ext_resource type="Texture2D" uid="uid://cdckb0rq7hku8" path="res://art/ingredients/ingredient (12).png" id="19_r1rwm"]
[ext_resource type="Texture2D" uid="uid://cdk06msux7n27" path="res://art/ingredients/ingredient (1).png" id="20_lvieo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tfgnn"]
atlas = ExtResource("2_1vs04")
region = Rect2(176, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3pbtb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfgnn")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xikwk"]
atlas = ExtResource("3_a6byi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ousv4"]
atlas = ExtResource("4_dldyt")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17x8"]
atlas = ExtResource("5_xyv3w")
region = Rect2(0, 0, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_hplc8"]
atlas = ExtResource("6_kgbqw")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdu8e"]
atlas = ExtResource("7_2jycr")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ebcy"]
atlas = ExtResource("8_o50oc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_td8g2"]
atlas = ExtResource("9_tiyoy")
region = Rect2(0, 0, 16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilphm"]
atlas = ExtResource("10_akept")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpccv"]
atlas = ExtResource("11_6ds4l")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw43y"]
atlas = ExtResource("12_t4plv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6stpa"]
atlas = ExtResource("13_a2rj2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7y6o"]
atlas = ExtResource("14_xpy1g")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3x6v"]
atlas = ExtResource("15_qcghy")
region = Rect2(0, 0, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_yalb1"]
atlas = ExtResource("16_773u0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbw4n"]
atlas = ExtResource("17_8w04p")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lruyr"]
atlas = ExtResource("18_3anbu")
region = Rect2(0, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3j88"]
atlas = ExtResource("19_r1rwm")
region = Rect2(0, 0, 16, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_0o4ka"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xikwk")
}],
"loop": true,
"name": &"Nori",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ousv4")
}],
"loop": true,
"name": &"avocado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17x8")
}],
"loop": true,
"name": &"carrot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hplc8")
}],
"loop": true,
"name": &"crabmeat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdu8e")
}],
"loop": true,
"name": &"cucumber",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ebcy")
}],
"loop": true,
"name": &"mirin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_td8g2")
}],
"loop": true,
"name": &"onion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilphm")
}],
"loop": true,
"name": &"pickledginger",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpccv")
}],
"loop": true,
"name": &"rice",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw43y")
}],
"loop": true,
"name": &"salmon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6stpa")
}],
"loop": true,
"name": &"salt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7y6o")
}],
"loop": true,
"name": &"seed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3x6v")
}],
"loop": true,
"name": &"soysauce",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yalb1")
}],
"loop": true,
"name": &"sugar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbw4n")
}],
"loop": true,
"name": &"tuna",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lruyr")
}],
"loop": true,
"name": &"vinegar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3j88")
}],
"loop": true,
"name": &"wasabi",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_iueid"]
atlas = ExtResource("20_lvieo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xdmcv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iueid")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="shopmenu" type="StaticBody2D"]
script = ExtResource("1_hgj28")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 2.0
offset_right = 121.0
offset_bottom = 81.0
color = Color(0.803922, 1, 0.870588, 0.243137)

[node name="leftB" type="Button" parent="."]
offset_left = 6.0
offset_top = 42.0
offset_right = 33.0
offset_bottom = 55.0

[node name="rightB" type="Button" parent="."]
offset_left = 89.0
offset_top = 40.0
offset_right = 116.0
offset_bottom = 53.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 49)
rotation = 1.5708
scale = Vector2(1.625, 1.53759)
sprite_frames = SubResource("SpriteFrames_3pbtb")
animation = &"left"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(101, 46)
rotation = -1.5708
scale = Vector2(1.625, 2.09002)
sprite_frames = SubResource("SpriteFrames_3pbtb")
animation = &"left"

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(21, 22)
scale = Vector2(1.6875, 1.5625)
sprite_frames = SubResource("SpriteFrames_0o4ka")
animation = &"wasabi"

[node name="coin" type="AnimatedSprite2D" parent="."]
position = Vector2(85, 16)
sprite_frames = SubResource("SpriteFrames_xdmcv")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 40.0
offset_top = 4.0
offset_right = 80.0
offset_bottom = 27.0
text = "100"

[node name="Button" type="Button" parent="."]
modulate = Color(0.704484, 0.129085, 0.310674, 1)
offset_left = 39.0
offset_top = 28.0
offset_right = 79.0
offset_bottom = 59.0
text = "BUY"

[node name="condiLable" type="RichTextLabel" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 5.0
offset_top = 56.0
offset_right = 119.0
offset_bottom = 75.0

[connection signal="pressed" from="leftB" to="." method="_on_left_b_pressed"]
[connection signal="pressed" from="rightB" to="." method="_on_right_b_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
